--- a/styles/index.html
+++ b/styles/index.html
@@ -15,6 +15,40 @@
     <title>Aivazpvski</title>
   </head>
   <body>
-    Aivazpvski
+    <header class="header" aria-label="Header">
+      <dic class="container">
+        <nav class="nav" aria-label="Navigation">
+          <ul class="nav-list" aria-label="List of navigation links">
+            <li>
+              <a href="#" class="nav-link" aria-label="Link to home">Home</a>
+            </li>
+
+            <li>
+              <a href="#" class="nav-link" aria-label="Link to About">About</a>
+            </li>
+
+            <li>
+              <a href="#" class="nav-link" aria-label="Link to History">
+                History
+              </a>
+            </li>
+
+            <li>
+              <a href="#" class="nav-link" aria-label="Link to Portfolio">
+                Portfolio
+              </a>
+            </li>
+
+            <li>
+              <a href="#" class="nav-link" aria-label="Link to Contacts">
+                Contacts
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </dic>
+    </header>
+    <main class="main"></main>
+    <footer class="footer"></footer>
   </body>
 </html>
