--- a/styles/index.html
+++ b/styles/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header class="header" aria-label="Header">
-      <dic class="container">
+      <div class="container">
         <nav class="nav" aria-label="Navigation">
           <ul class="nav-list" aria-label="List of navigation links">
             <li>
@@ -46,7 +46,7 @@
             </li>
           </ul>
         </nav>
-      </dic>
+      </div>
     </header>
     <main class="main"></main>
     <footer class="footer"></footer>
