--- a/styles/index.html
+++ b/styles/index.html
@@ -48,7 +48,23 @@
         </nav>
       </div>
     </header>
-    <main class="main"></main>
+    <main class="main" aria-label="main">
+      <section class="home" aria-label="home-section">
+        <div class="container">
+          <h1 class="home-title" aria-label="title">
+            Ivan Constantinovich Aivazovski
+          </h1>
+          <p class="home-description" aria-label="description">
+            Russian marine painter of Armenian origin, collector, philanthropist
+          </p>
+          <img
+            src="/Webp/portrait 1.webp"
+            alt="photo-aivazoski"
+            class="home-image"
+          />
+        </div>
+      </section>
+    </main>
     <footer class="footer"></footer>
   </body>
 </html>
