--- a/styles/index.html
+++ b/styles/index.html
@@ -20,21 +20,21 @@
         <nav class="nav" aria-label="Navigation">
           <ul class="nav-list" aria-label="List of navigation links">
             <li>
-              <a href="#" class="nav-link" aria-label="Link to home">Home</a>
+              <a href="#home-id" class="nav-link" aria-label="Link to home">Home</a>
             </li>
 
             <li>
-              <a href="#" class="nav-link" aria-label="Link to About">About</a>
+              <a href="#about-id " class="nav-link" aria-label="Link to About">About</a>
             </li>
 
             <li>
-              <a href="#" class="nav-link" aria-label="Link to History">
+              <a href="#history-id" class="nav-link" aria-label="Link to History">
                 History
               </a>
             </li>
 
             <li>
-              <a href="#" class="nav-link" aria-label="Link to Portfolio">
+              <a href="#portfolio-id" class="nav-link" aria-label="Link to Portfolio">
                 Portfolio
               </a>
             </li>
@@ -49,7 +49,7 @@
       </div>
     </header>
     <main class="main" aria-label="main">
-      <section class="home" aria-label="home-section">
+      <section class="home" aria-label="home-section" id="home-id">
         <div class="container">
           <h1 class="home-title" aria-label="title">
             Ivan Constantinovich Aivazovski
@@ -64,8 +64,8 @@
           />
         </div>
       </section>
-      <section class="about" aria-label="about-section">
-        <div class="container">
+      <section class="about" aria-label="about-section" id="about-id">
+        <div class="container about-container">
           <h2 class="about-title" aria-label="about title">About</h2>
           <h3 class="about-subtitle-ru" aria-label="about subtitle">
             Ива́н Константи́нович Айвазо́вский – русский живописец-маринист
@@ -78,7 +78,7 @@
             составляют больше половины его работ. Художник считается одним из
             величайших маринистов всех времён.
           </p>
-          <hr class="divider" />
+          <div class="divider-container" ><hr class="divider" /></div>
           <h3 class="about-subtitle-en" aria-label="about subtitle en">
             Ivan Konstantinovich Aivazovsky - Russian marine painter of Armenian
             origin, collector, philanthropist.
@@ -90,6 +90,25 @@
             half of his work. The artist is considered one of the greatest
             marine painters of all time.
           </p>
+        </div>
+      </section>
+      <section class="history-section" aria-label="histrory section" id="history-id">
+        <div class="container" aria-label="history container">
+          <h2 class="history-title" aria-label="history title">History</h2>
+          <img src="/Webp/дом_где_родился_айвазовский 1history.webp" alt="house of Aivozovski" class="history-image" />
+          <p class="history-description" aria-label="history description">
+            Дом в котором родился Айвазовский | The house where Aivazovsky was born 
+        </div>
+      </section>
+      <section class="portfolio" aria-label="portfolio section" id="portfolio-id">
+        <div class="container" aria-label="container portfolio">
+          <h2 class="portfolio-title" aria-label="portfolio title">Portfolio</h2>
+          <img src="/Webp/Зимний обоз в пути (картина Ивана Айвазовского, 1857) 1.webp" alt="Winter wagon train on the way, 1857" class="portfolio-image" />
+          <p class="portfolio-description" aria-label="picture one description">Зимний обоз в пути, 1857 г. | Winter wagon train on the way, 1857</p>
+          <img src="/Webp/Айвазовский_Радуга_1873 1.webp" alt="Rainbow 1873" class="portfolio-image" />
+          <p class="portfolio-description" aria-label="picture two description">Радуга, 1873 г. | Rainbow, 1873</p>
+          <img src="/Webp/неаполитанский_залив_утром_1893 1.webp" alt="Gulf of Naples in the morning, 1893" class="portfolio-image" />
+          <p class="portfolio-description" aria-label="picture three description">Неаполитанский залив утром, 1893 г. | Gulf of Naples in the morning, 1893</p>
         </div>
       </section>
     </main>
