--- a/styles/index.html
+++ b/styles/index.html
@@ -10,7 +10,6 @@
       rel="stylesheet"
     />
     <link rel="icon" href="assets/favicon.png" type="imgage/png" />
-    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="index.css" />
     <title>Aivazpvski</title>
   </head>
@@ -20,27 +19,43 @@
         <nav class="nav" aria-label="Navigation">
           <ul class="nav-list" aria-label="List of navigation links">
             <li>
-              <a href="#home-id" class="nav-link" aria-label="Link to home">Home</a>
+              <a href="#home-id" class="nav-link" aria-label="Link to home"
+                >Home</a
+              >
             </li>
 
             <li>
-              <a href="#about-id " class="nav-link" aria-label="Link to About">About</a>
+              <a href="#about-id " class="nav-link" aria-label="Link to About"
+                >About</a
+              >
             </li>
 
             <li>
-              <a href="#history-id" class="nav-link" aria-label="Link to History">
+              <a
+                href="#history-id"
+                class="nav-link"
+                aria-label="Link to History"
+              >
                 History
               </a>
             </li>
 
             <li>
-              <a href="#portfolio-id" class="nav-link" aria-label="Link to Portfolio">
+              <a
+                href="#portfolio-id"
+                class="nav-link"
+                aria-label="Link to Portfolio"
+              >
                 Portfolio
               </a>
             </li>
 
             <li>
-              <a href="#" class="nav-link" aria-label="Link to Contacts">
+              <a
+                href="#contact-id"
+                class="nav-link"
+                aria-label="Link to Contacts"
+              >
                 Contacts
               </a>
             </li>
@@ -61,6 +76,7 @@
             src="/Webp/portrait 1.webp"
             alt="photo-aivazoski"
             class="home-image"
+            loading="lazy"
           />
         </div>
       </section>
@@ -78,7 +94,7 @@
             составляют больше половины его работ. Художник считается одним из
             величайших маринистов всех времён.
           </p>
-          <div class="divider-container" ><hr class="divider" /></div>
+          <div class="divider-container"><hr class="divider" /></div>
           <h3 class="about-subtitle-en" aria-label="about subtitle en">
             Ivan Konstantinovich Aivazovsky - Russian marine painter of Armenian
             origin, collector, philanthropist.
@@ -92,26 +108,120 @@
           </p>
         </div>
       </section>
-      <section class="history-section" aria-label="histrory section" id="history-id">
+      <section
+        class="history-section"
+        aria-label="histrory section"
+        id="history-id"
+      >
         <div class="container" aria-label="history container">
           <h2 class="history-title" aria-label="history title">History</h2>
-          <img src="/Webp/дом_где_родился_айвазовский 1history.webp" alt="house of Aivozovski" class="history-image" />
+          <img
+            src="/Webp/дом_где_родился_айвазовский 1history.webp"
+            alt="house of Aivozovski"
+            class="history-image"
+            loading="lazy"
+          />
           <p class="history-description" aria-label="history description">
-            Дом в котором родился Айвазовский | The house where Aivazovsky was born 
+            Дом в котором родился Айвазовский | The house where Aivazovsky was
+            born
+          </p>
         </div>
       </section>
-      <section class="portfolio" aria-label="portfolio section" id="portfolio-id">
+      <section
+        class="portfolio"
+        aria-label="portfolio section"
+        id="portfolio-id"
+      >
         <div class="container" aria-label="container portfolio">
-          <h2 class="portfolio-title" aria-label="portfolio title">Portfolio</h2>
-          <img src="/Webp/Зимний обоз в пути (картина Ивана Айвазовского, 1857) 1.webp" alt="Winter wagon train on the way, 1857" class="portfolio-image" />
-          <p class="portfolio-description" aria-label="picture one description">Зимний обоз в пути, 1857 г. | Winter wagon train on the way, 1857</p>
-          <img src="/Webp/Айвазовский_Радуга_1873 1.webp" alt="Rainbow 1873" class="portfolio-image" />
-          <p class="portfolio-description" aria-label="picture two description">Радуга, 1873 г. | Rainbow, 1873</p>
-          <img src="/Webp/неаполитанский_залив_утром_1893 1.webp" alt="Gulf of Naples in the morning, 1893" class="portfolio-image" />
-          <p class="portfolio-description" aria-label="picture three description">Неаполитанский залив утром, 1893 г. | Gulf of Naples in the morning, 1893</p>
+          <h2 class="portfolio-title" aria-label="portfolio title">
+            Portfolio
+          </h2>
+          <img
+            src="/Webp/Зимний обоз в пути (картина Ивана Айвазовского, 1857) 1.webp"
+            alt="Winter wagon train on the way, 1857"
+            class="portfolio-image"
+            loading="lazy"
+          />
+          <p class="portfolio-description" aria-label="picture one description">
+            Зимний обоз в пути, 1857 г. | Winter wagon train on the way, 1857
+          </p>
+          <img
+            src="/Webp/Айвазовский_Радуга_1873 1.webp"
+            alt="Rainbow 1873"
+            class="portfolio-image"
+            loading="lazy"
+          />
+          <p class="portfolio-description" aria-label="picture two description">
+            Радуга, 1873 г. | Rainbow, 1873
+          </p>
+          <img
+            src="/Webp/неаполитанский_залив_утром_1893 1.webp"
+            alt="Gulf of Naples in the morning, 1893"
+            class="portfolio-image"
+            loading="lazy"
+          />
+          <p
+            class="portfolio-description"
+            aria-label="picture three description"
+          >
+            Неаполитанский залив утром, 1893 г. | Gulf of Naples in the morning,
+            1893
+          </p>
         </div>
       </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="contacts" aria-label="contact section" id="contact-id">
+      <div class="container">
+        <h2 class="contacts-title" aria-label="contacts title">Contacts</h2>
+        <button class="contacts-button">
+          <a
+            href="https://www.deepl.com/ru/translator#en/ru/weird"
+            class="button-link"
+            >aivazovsky.com</a
+          >
+        </button>
+        <address class="socials" aria-label="social icons">
+          <a
+            href="https://www.youtube.com/"
+            target="_blank"
+            aria-label="facebook link"
+          >
+            <svg class="youtube-icon social-icon" aria-label="youtube icon">
+              <use xlink:href="sprites.svg#youtube-icon"></use>
+            </svg>
+          </a>
+          <a
+            href="https://www.youtube.com/"
+            target="_blank"
+            aria-label="linkedin link"
+          >
+            <svg class="linkedin-icon social-icon" aria-label="linkedin icon">
+              <use xlink:href="sprites.svg#linkedin-icon"></use>
+            </svg>
+          </a>
+          <a
+            href="https://www.youtube.com/"
+            target="_blank"
+            aria-label="instagram link"
+          >
+            <svg class="instagram-icon social-icon" aria-label="instagram icon">
+              <use xlink:href="sprites.svg#instagram-icon"></use>
+            </svg>
+          </a>
+          <a
+            href="https://www.youtube.com/"
+            target="_blank"
+            aria-label="facebook link"
+          >
+            <svg class="facebook-icon social-icon" aria-label="facebook icon">
+              <use xlink:href="sprites.svg#facebook-icon"></use>
+            </svg>
+          </a>
+        </address>
+        <p class="conctacts-info" aria-label="contacts info">
+          More works you can see in these social networks
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
