--- a/styles/index.html
+++ b/styles/index.html
@@ -19,15 +19,15 @@
         <nav class="nav" aria-label="Navigation">
           <ul class="nav-list" aria-label="List of navigation links">
             <li>
-              <a href="#home-id" class="nav-link" aria-label="Link to home"
-                >Home</a
-              >
+              <a href="#home-id" class="nav-link" aria-label="Link to home">
+                Home
+              </a>
             </li>
 
             <li>
-              <a href="#about-id " class="nav-link" aria-label="Link to About"
-                >About</a
-              >
+              <a href="#about-id " class="nav-link" aria-label="Link to About">
+                About
+              </a>
             </li>
 
             <li>
@@ -137,7 +137,7 @@
             Portfolio
           </h2>
           <img
-            src="/Webp/Зимний обоз в пути (картина Ивана Айвазовского, 1857) 1.webp"
+            src="/Webp/Зимний_обоз_в_пути_(картина Ивана Айвазовского, 1857) 1.webp"
             alt="Winter wagon train on the way, 1857"
             class="portfolio-image"
             loading="lazy"
@@ -177,46 +177,93 @@
           <a
             href="https://www.deepl.com/ru/translator#en/ru/weird"
             class="button-link"
-            >aivazovsky.com</a
           >
+            aivazovsky.com
+          </a>
         </button>
         <address class="socials" aria-label="social icons">
           <a
-            href="https://www.youtube.com/"
-            target="_blank"
-            aria-label="facebook link"
-          >
-            <svg class="youtube-icon social-icon" aria-label="youtube icon">
-              <use xlink:href="sprites.svg#youtube-icon"></use>
-            </svg>
-          </a>
-          <a
-            href="https://www.youtube.com/"
+            href="https://www.linkedin.com/"
             target="_blank"
             aria-label="linkedin link"
+            class="social-link linkedin"
           >
-            <svg class="linkedin-icon social-icon" aria-label="linkedin icon">
-              <use xlink:href="sprites.svg#linkedin-icon"></use>
+            <svg class="icon">
+              <use href="/Webp/sprites.svg#icon-youtube"></use>
+            </svg>
+          </a>
+          <!-- <a
+            href="https://www.youtube.com/"
+            target="_blank"
+            aria-label="youtube link"
+            class="social-link youtube"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 55 56"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M17.113 6.667c6.478-1.062 14.296-1.062 20.775 0 5.886.965 10.447 5.747 11.32 10.898 1.056 6.235 1.056 13.78 0 20.016-.873 5.15-5.434 9.933-11.32 10.898-6.48 1.062-14.297 1.062-20.775 0-5.887-.965-10.448-5.747-11.32-10.898-1.057-6.235-1.057-13.78 0-20.016.872-5.15 5.433-9.933 11.32-10.898ZM38.588.937c-6.944-1.139-15.234-1.139-22.178 0C8.875 2.173 2.251 8.396.886 16.451c-1.181 6.971-1.181 15.273 0 22.243C2.25 46.75 8.875 52.974 16.41 54.21c6.944 1.139 15.234 1.139 22.178 0 7.537-1.236 14.16-7.459 15.525-15.515 1.181-6.97 1.181-15.272 0-22.243C52.75 8.396 46.126 2.173 38.59.937ZM23.887 13.591c-.768-.592-1.754-.648-2.567-.144-.813.504-1.32 1.484-1.32 2.551v23.15c0 1.067.508 2.048 1.32 2.551.813.504 1.8.448 2.567-.143l15-11.575c.695-.537 1.113-1.44 1.113-2.408s-.418-1.871-1.113-2.408l-15-11.574Zm9.106 13.982L25 33.741V21.405l7.993 6.168Z"
+                clip-rule="evenodd"
+              />
             </svg>
           </a>
           <a
-            href="https://www.youtube.com/"
+            href="https://www.instagram.com/"
             target="_blank"
             aria-label="instagram link"
+            class="social-link instagram"
           >
-            <svg class="instagram-icon social-icon" aria-label="instagram icon">
-              <use xlink:href="sprites.svg#instagram-icon"></use>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 65 66"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M13 .089C5.82.089 0 5.907 0 13.084V52.07c0 7.177 5.82 12.995 13 12.995h39c7.18 0 13-5.818 13-12.995V13.084C65 5.907 59.18.09 52 .09H13ZM6.5 13.084A6.499 6.499 0 0 1 13 6.587h39c3.59 0 6.5 2.909 6.5 6.497V52.07a6.499 6.499 0 0 1-6.5 6.498H13c-3.59 0-6.5-2.91-6.5-6.498V13.084Zm16.25 16.244a3.25 3.25 0 0 0-6.5 0v19.493a3.25 3.25 0 0 0 6.5 0V29.328Zm1.625-11.37A4.874 4.874 0 0 1 19.5 22.83a4.874 4.874 0 1 1 4.875-4.874Zm8.125 8.121c1.103 0 2.078.55 2.666 1.39a11.411 11.411 0 0 1 5.459-1.39C47.643 26.08 52 32.336 52 37.682V48.82a3.25 3.25 0 0 1-6.5.001V37.682c0-2.495-2.143-5.105-4.875-5.105-1.703 0-3.584.926-4.875 3.129V48.821a3.25 3.25 0 0 1-6.5 0V29.331a3.252 3.252 0 0 1 3.25-3.252Z"
+                clip-rule="evenodd"
+              />
             </svg>
           </a>
           <a
-            href="https://www.youtube.com/"
+            href="https://www.facebook.com/"
             target="_blank"
             aria-label="facebook link"
+            class="social-link facebook"
           >
-            <svg class="facebook-icon social-icon" aria-label="facebook icon">
-              <use xlink:href="sprites.svg#facebook-icon"></use>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 65 66"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M19.076.488C13.786.726 9.2 2.019 5.497 5.705 1.782 9.41.504 14.012.265 19.246.116 22.513-.754 47.191 1.769 53.663c1.7 4.366 5.05 7.724 9.459 9.43 2.056.8 4.404 1.34 7.848 1.498 28.798 1.303 39.473.594 43.975-10.928.798-2.05 1.348-4.396 1.5-7.83 1.316-28.861-.213-35.117-5.232-40.128-3.981-3.97-8.664-6.672-40.243-5.217Zm.265 58.3c-3.152-.143-4.863-.668-6.005-1.11-2.872-1.115-5.028-3.263-6.138-6.117-1.92-4.917-1.283-28.274-1.112-32.053.168-3.702.918-7.085 3.531-9.697 3.234-3.225 7.412-4.806 35.86-3.522 3.713.168 7.106.916 9.725 3.521 3.234 3.225 4.838 7.434 3.531 35.763-.142 3.144-.669 4.85-1.112 5.988-2.927 7.498-9.66 8.538-38.28 7.226Zm26.45-43.463a3.877 3.877 0 0 0 3.881 3.87 3.88 3.88 0 0 0 3.884-3.87c0-2.135-1.74-3.87-3.884-3.87a3.876 3.876 0 0 0-3.88 3.87ZM15.804 32.538c0 9.145 7.434 16.56 16.606 16.56 9.17 0 16.606-7.415 16.606-16.56S41.58 15.983 32.41 15.983c-9.172 0-16.606 7.41-16.606 16.555Zm5.827 0c0-5.933 4.825-10.747 10.779-10.747 5.953 0 10.778 4.814 10.778 10.747 0 5.937-4.825 10.752-10.778 10.752-5.954 0-10.779-4.815-10.779-10.752Z"
+                clip-rule="evenodd"
+              />
             </svg>
           </a>
+          <a
+            href="https://twitter.com/"
+            target="_blank"
+            aria-label="twitter link"
+            class="social-link twitter"
+          >
+            <svg
+              viewBox="0 0 65 66"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M0 13.0841C0 5.90705 5.82029 0.0888672 13 0.0888672H52C59.1796 0.0888672 65 5.90705 65 13.0841V52.07C65 59.2469 59.1796 65.0652 52 65.0652H13C5.82029 65.0652 0 59.2469 0 52.07V13.0841ZM13 6.5865C9.41015 6.5865 6.5 9.49559 6.5 13.0841V52.07C6.5 55.6586 9.41015 58.5676 13 58.5676H32.5V35.8259H29.25C27.455 35.8259 26 34.3714 26 32.5771C26 30.7827 27.455 29.3282 29.25 29.3282H32.5V24.455C32.5 18.175 37.5928 13.0841 43.875 13.0841H45.825C47.62 13.0841 49.075 14.5387 49.075 16.333C49.075 18.1272 47.62 19.5818 45.825 19.5818H43.875C41.1827 19.5818 39 21.7636 39 24.455V29.3282H45.825C47.62 29.3282 49.075 30.7827 49.075 32.5771C49.075 34.3714 47.62 35.8259 45.825 35.8259H39V58.5676H52C55.59 58.5676 58.5 55.6586 58.5 52.07V13.0841C58.5 9.49559 55.59 6.5865 52 6.5865H13Z"
+              />
+            </svg>
+          </a> -->
         </address>
         <p class="conctacts-info" aria-label="contacts info">
           More works you can see in these social networks
@@ -225,3 +272,4 @@
     </footer>
   </body>
 </html>
+<!-- SVG была наконец уствновлена через спрайты. Нужно продолжить остальные! -->
