--- a/styles/index.html
+++ b/styles/index.html
@@ -137,7 +137,7 @@
             Portfolio
           </h2>
           <img
-            src="/Webp/Зимний_обоз_в_пути_(картина Ивана Айвазовского, 1857) 1.webp"
+            src="/Webp/Зимний обоз в пути (картина Ивана Айвазовского, 1857) 1.webp"
             alt="Winter wagon train on the way, 1857"
             class="portfolio-image"
             loading="lazy"
@@ -173,7 +173,7 @@
     <footer class="contacts" aria-label="contact section" id="contact-id">
       <div class="container">
         <h2 class="contacts-title" aria-label="contacts title">Contacts</h2>
-        <button class="contacts-button">
+        <button class="contacts-button" aria-label="Contact Us">
           <a
             href="https://www.deepl.com/ru/translator#en/ru/weird"
             class="button-link"
@@ -190,6 +190,36 @@
           >
             <svg class="icon">
               <use href="/Webp/sprites.svg#icon-youtube"></use>
+            </svg>
+          </a>
+          <a
+            href="https://www.youtube.com/"
+            target="_blank"
+            aria-label="linkedin link"
+            class="social-link linkedin"
+          >
+            <svg class="icon">
+              <use href="/Webp/sprites.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+          <a
+            href="https://www.instagram.com/"
+            target="_blank"
+            aria-label="instagram link"
+            class="social-link instagram"
+          >
+            <svg class="icon">
+              <use href="/Webp/sprites.svg#icon-instagram"></use>
+            </svg>
+          </a>
+          <a
+            href="https://www.facebook.com/"
+            target="_blank"
+            aria-label="facebook link"
+            class="social-link facebook"
+          >
+            <svg class="icon">
+              <use href="/Webp/sprites.svg#icon-facebook"></use>
             </svg>
           </a>
           <!-- <a
@@ -265,7 +295,7 @@
             </svg>
           </a> -->
         </address>
-        <p class="conctacts-info" aria-label="contacts info">
+        <p class="contacts-info" aria-label="contacts info">
           More works you can see in these social networks
         </p>
       </div>
